# gooselib

./: CMakeLists.txt  LICENSE  README.md  gooselib_allocator.c  gooselib_allocator.h  gooselib_string.c  gooselib_string.h
documentation/: allocator.md  array.md  string.md
examples/: reverse.c
gooselib/: gooselib_allocator.c  gooselib_allocator.h  gooselib_array.c  gooselib_array.h  gooselib_string.c  gooselib_string.h  gooselib_types.h
